--- a/inoa/inoa_site/templates/inoa_site/home.html
+++ b/inoa/inoa_site/templates/inoa_site/home.html
@@ -22,15 +22,11 @@
 </head>
 <body>
     <section>
-        <h1>Ola, {{user_detail}}</h1>
+        <h1>Olá, {{user_detail}}</h1>
     </section>
     <section>
         <div class="col-12">
-            <button
-                    class="btn btn-primary"
-                    type="submit"
-                    name="api-request"
-            >Login</button>
+            <p>{{advice}}</p>
         </div>
     </section>
 
